# quartodo

./: README.md  app.py  db.py  pyproject.toml
templates/: base.html  delete.html  form.html  index.html
