[tool.poetry]
name = "quartodo"
version = "0.1.0"
description = ""
authors = ["Ozcan Yarimdunya <ozcan.yarimdunya@sahibinden.com>"]

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
